add swagger on model
